made responsive for desktop and created 4 new project site pages

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
 <header>
     <nav>
         <div class="home">
-            <a href ="#">
+            <a href ="index.html">
                 <h3>Ramsey Merdassi<br>Full Stack Web Developer</h3>
             </a>
         </div>
@@ -64,37 +66,82 @@
     </div>
 
     <div class="projects">
+
         <div class="projects_row1">
-            <div id="invoice">
-                <div>Invoice</div>
-            </div>
-            <div class="hairdresser">
-                <div>Hairdresser Mobile App</div>
-            </div>
+            <a href="invoice.html">
+                <div class="invoice">
+                    <div><span>Invoice Generator</span></div>
+                </div>
+            </a>
+            <a href="mobile_app.html">
+                <div class="hairdresser">
+                    <div><span>Hairdresser Mobile App</span></div>
+                </div>
+            </a>
+
         </div>
         <div class="projects_row2">
-            <div>
-                Project 3
-            </div>
-            <div>
-                Project 4
-            </div>
+            <a href="interior.html">
+                <div class="interior">
+                    <div><span>Interior Design Website</span></div>
+                </div>
+            </a>
+
+            <a href="crm.html">
+                <div class="crm">
+                    <div><span>CRM</span></div>
+                </div>
+            </a>
+
         </div>
+
     </div>
+
 
     <div class="skills">
         <h1>Skills & Competencies</h1>
-        <div class="language">
-            <p>I am competent in the following languages:</p>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>PHP</li>
-                <li>JavaScript</li>
-                <li>React</li>
-            </ul>
-        </div>
+         <div class="skills_comp_sections">
+             <div class="language">
+                 <p>My software development skillset:</p>
+                 <div class="list">
+                     <div>
+                         <ul>
+                             <li>HTML</li>
+                             <li>CSS</li>
+                             <li>PHP</li>
+                             <li>JavaScript</li>
+                             <li>React</li>
+                             <li>Typescript</li>
+                         </ul>
+                     </div>
+                     <div>
+                         <ul>
+                             <li>Agile Professional <br>Certification</li>
+                             <li>Unit Testing</li>
+                             <li>Node.js</li>
+                             <li>SQL</li>
+                             <li>Mongo DB</li>
+                         </ul>
+                     </div>
+                 </div>
+             </div>
 
+             <div class="competency">
+                 <p>My core competencies:</p>
+                 <div class="list">
+                     <div>
+                         <ul>
+                             <li>Managing others</li>
+                             <li>Teamwork</li>
+                             <li>Time Management</li>
+                             <li>Decision-Making</li>
+                             <li>Creativity</li>
+                             <li>Attention to Detail</li>
+                         </ul>
+                     </div>
+                 </div>
+             </div>
+         </div>
     </div>
 
 
