--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+<!--    You only need these two google fonts links once (above)-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&display=swap" rel="stylesheet">
@@ -35,7 +36,7 @@
                 <i id="linkedin" class='bx bxl-linkedin'></i>
             </a>
         </div>
-
+<!--Remove these empty lines-->
 
     </nav>
 </header>
@@ -45,8 +46,13 @@
             <h1>A <small>little</small> about me</h1>
         </div>
         <div class="about_me_para">
+<!--            You should indent these inner divs to make the code-->
+<!--            easier to read. Use code -> reformat code in PHPstorm to-->
+<!--            do this automatically-->
         <div>
             <p>I have recently completed a 16wk
+<!--                You can break these longer paragraphs of text into-->
+<!--                multiple lines to make them easier to read-->
             <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>
             at iO Academy in Bath (July 1-Oct 18 2024). I am now looking to further improve my Software Development skills in a Junior Dev role. I found a passion for creating innovation digital products
             whilst studying an experiential learning focused Business degree called <a href="https://courses.uwe.ac.uk/N191/business-team-entrepreneurship" target="_blank">Business(Team Entrepreneurship)</a> at The University of the West of England. After initially building a website for a student discount project in Yr1 of the course using WordPress & Elementor, I decided I needed a mobile app and ventured
