amended flexbox to fix responsive issues

--- a/index.html
+++ b/index.html
@@ -40,29 +40,64 @@
     </nav>
 </header>
 
+
     <div class="intro">
-        <div class="about_me">
-            <h1>A <small>little</small> about me</h1>
+        <div class="intro_container">
+
+            <div class="intro_header">
+                <h1>about me</h1>
+            </div>
+            <div class="intro_p">
+                <div class="intro_p1">
+                    <p>I have recently completed a 16wk
+                        <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>
+                        at iO Academy in Bath (July 1-Oct 18 2024). I am now looking to further improve my Software Development skills in a Junior Dev role. I found a passion for creating innovation digital products
+                        whilst studying an experiential learning focused Business degree called <a href="https://courses.uwe.ac.uk/N191/business-team-entrepreneurship" target="_blank">Business(Team Entrepreneurship)</a> at The University of the West of England. After initially building a website for a student discount project in Yr1 of the course using WordPress & Elementor, I decided I needed a mobile app and ventured
+                        down the difficult route of trying to build a mobile app. This was extremely challenging
+                    </p>
+                </div>
+                <div class="intro_p2">
+                    <p>for me as I was self-teaching myself programming whilst undertaking the development. Still I persevered, determined to master coding and I learnt many lessons from this experience and many things about myself, from how to manage my time well and deal with the stress of learning a new complex subject. My
+                        decision to undertake a Coding Bootcamp was to address some of the learning difficulties I faced, with it extremely useful having on hand my trainer to explain concepts. Having working on my project by myself, I also learnt a lot by working with other trainees on projects.
+                    </p>
+                </div>
+                <div class="intro_p_mob">
+                    <p>I have recently completed a 16wk
+                        <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>
+                        at iO Academy in Bath (July 1-Oct 18 2024). I am now looking to further improve my Software Development skills in a Junior Dev role. I found a passion for creating innovation digital products
+                        whilst studying an experiential learning focused Business degree called <a href="https://courses.uwe.ac.uk/N191/business-team-entrepreneurship" target="_blank">Business(Team Entrepreneurship)</a> at The University of the West of England.</p>
+                </div>
+            </div>
+
         </div>
-        <div class="about_me_para">
-        <div>
-            <p>I have recently completed a 16wk
-            <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>
-            at iO Academy in Bath (July 1-Oct 18 2024). I am now looking to further improve my Software Development skills in a Junior Dev role. I found a passion for creating innovation digital products
-            whilst studying an experiential learning focused Business degree called <a href="https://courses.uwe.ac.uk/N191/business-team-entrepreneurship" target="_blank">Business(Team Entrepreneurship)</a> at The University of the West of England. After initially building a website for a student discount project in Yr1 of the course using WordPress & Elementor, I decided I needed a mobile app and ventured
-            down the difficult route of trying to build a mobile app. This was extremely challenging
-            </p>
-        </div>
-        <div>
-            <p>for me as I was self-teaching myself programming whilst undertaking the development. Still I persevered, determined to master coding and I learnt many lessons from this experience and many things about myself, from how to manage my time well and deal with the stress of learning a new complex subject. My
-            decision to undertake a Coding Bootcamp was to address some of the learning difficulties I faced, with it extremely useful having on hand my trainer to explain concepts. Having working on my project by myself, I also learnt a lot by working with other trainees on projects.
-            </p>
-        </div>
-        </div>
+
+
+<!--        <div class="about_me_para">-->
+<!--            <div class="intro_p_mob">-->
+<!--                <p>I have recently completed a 16wk-->
+<!--                    <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>-->
+<!--                    at iO Academy in Bath (July 1-Oct 18 2024). I am now looking to further improve my Software Development skills in a Junior Dev role. I found a passion for creating innovation digital products-->
+<!--                    whilst studying an experiential learning focused Business degree called <a href="https://courses.uwe.ac.uk/N191/business-team-entrepreneurship" target="_blank">Business(Team Entrepreneurship)</a> at The University of the West of England.</p>-->
+<!--            </div>-->
+<!--            <div class="intro_p_dt">-->
+<!--                <p>I have recently completed a 16wk-->
+<!--                <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>-->
+<!--                at iO Academy in Bath (July 1-Oct 18 2024). I am now looking to further improve my Software Development skills in a Junior Dev role. I found a passion for creating innovation digital products-->
+<!--                whilst studying an experiential learning focused Business degree called <a href="https://courses.uwe.ac.uk/N191/business-team-entrepreneurship" target="_blank">Business(Team Entrepreneurship)</a> at The University of the West of England. After initially building a website for a student discount project in Yr1 of the course using WordPress & Elementor, I decided I needed a mobile app and ventured-->
+<!--                down the difficult route of trying to build a mobile app. This was extremely challenging-->
+<!--                </p>-->
+<!--            </div>-->
+<!--            <div class="intro_p_dt">-->
+<!--                <p>for me as I was self-teaching myself programming whilst undertaking the development. Still I persevered, determined to master coding and I learnt many lessons from this experience and many things about myself, from how to manage my time well and deal with the stress of learning a new complex subject. My-->
+<!--                decision to undertake a Coding Bootcamp was to address some of the learning difficulties I faced, with it extremely useful having on hand my trainer to explain concepts. Having working on my project by myself, I also learnt a lot by working with other trainees on projects.-->
+<!--                </p>-->
+<!--            </div>-->
+<!--        </div>-->
+
     </div>
 
     <div class="project_header">
-        <h1>Projects</h1>
+        <h1>projects</h1>
     </div>
 
     <div class="projects">
@@ -99,7 +134,7 @@
 
 
     <div class="skills">
-        <h1>Skills & Competencies</h1>
+        <h1>skills & competencies</h1>
          <div class="skills_comp_sections">
              <div class="language">
                  <p>My software development skillset:</p>
@@ -133,10 +168,10 @@
                          <ul>
                              <li>Managing others</li>
                              <li>Teamwork</li>
-                             <li>Time Management</li>
-                             <li>Decision-Making</li>
+                             <li>Time management</li>
+                             <li>Decision-making</li>
                              <li>Creativity</li>
-                             <li>Attention to Detail</li>
+                             <li>Attention to detail</li>
                          </ul>
                      </div>
                  </div>
@@ -145,15 +180,17 @@
     </div>
 
 
+<div class="page_container">
+    <footer>
+        <div class="contact">
+            <h3>Email me:</h3>
+            <a href="mailto:merdassi.r@gmail.com">
+                <i id="email" class='bx bxs-envelope'></i>
+            </a>
+        </div>
+    </footer>
+</div>
 
-<footer>
-    <div class="contact">
-        <h3>Email me:</h3>
-        <a href="mailto:merdassi.r@gmail.com">
-            <i id="email" class='bx bxs-envelope'></i>
-        </a>
-    </div>
-</footer>
 
 </body>
 </html>
