--- a/film-quote-game.html
+++ b/film-quote-game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <title>Hairdresser Mobile App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
@@ -40,11 +40,15 @@
 
 <div class="project_head">
     <div>
-        <h1>Invoice Generator</h1>
+        <h1>Film Quote Game</h1>
     </div>
     <div class="project_info">
-        <img id="project_img" src="/images/invoice.jpg" alt="Picture of an invoice system">
+        <img src="/images/film_quote_game_main.png" alt="">
         <p class="project_p">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+        <div class="external-links">
+            <a id="link" href="https://2024-ramseym.dev.io-academy.uk/2024-jul-fst-film-quote-quiz/" target="_blank">Link</a>
+            <a href="https://github.com/ramsey-merdassi/film-quote-quiz" target="_blank">Repo</a>
+        </div>
     </div>
 
 </div>
@@ -52,7 +56,7 @@
 
 <footer>
     <div class="contact">
-        <h3>Email me:</h3>
+        <h3>Get in touch:</h3>
         <a href="mailto:merdassi.r@gmail.com">
             <i id="email" class='bx bxs-envelope'></i>
         </a>
