--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
@@ -15,44 +16,42 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
+
 <body>
-<header>
-    <nav>
-        <div class="home">
-            <a href ="index.html">
-                <h3>Ramsey Merdassi<br>Full Stack Web Developer</h3>
-            </a>
-        </div>
+    <header>
+        <nav>
+            <div class="home">
+                <a href ="index.html">
+                    <h3>Ramsey Merdassi<br>Full Stack Web Developer</h3>
+                </a>
+            </div>
 
-        <div class="nav_icons">
-            <a href ="https://docs.google.com/document/d/1ni-M1XgUds6kA2DzHWZszNyYOW7tWs84gWVL2x9NGeM/edit?usp=drive_link" target="_blank">
-                <i id="cv" class='bx bx-download'></i>
-            </a>
-            <a href="https://github.com/ramsey-merdassi" target="_blank">
-                <i id="github" class='bx bxl-github' ></i>
-            </a>
-            <a href="https://www.linkedin.com/in/ramsey-merdassi-0868261a4" target="_blank">
-                <i id="linkedin" class='bx bxl-linkedin'></i>
-            </a>
-        </div>
+            <div class="nav_icons">
+                <a href ="https://docs.google.com/document/d/1ni-M1XgUds6kA2DzHWZszNyYOW7tWs84gWVL2x9NGeM/edit?usp=drive_link" target="_blank">
+                    <i id="cv" class='bx bx-download'></i>
+                </a>
+                <a href="https://github.com/ramsey-merdassi" target="_blank">
+                    <i id="github" class='bx bxl-github' ></i>
+                </a>
+                <a href="https://www.linkedin.com/in/ramsey-merdassi-0868261a4" target="_blank">
+                    <i id="linkedin" class='bx bxl-linkedin'></i>
+                </a>
+            </div>
+        </nav>
+    </header>
 
-
-    </nav>
-</header>
-
-
-    <div class="intro">
-        <div class="intro_container">
+    <section class="about-me">
+        <div class="about-me-container">
 
             <div class="intro_header">
                 <h1>about me</h1>
             </div>
-            <div class="intro_p">
+
+            <div class="intro-p">
                 <div class="intro_p1">
-                    <p>I have recently completed a 16wk
-                        <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>
+                    <p>I have recently completed a 16wk <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>
                         at iO Academy in Bath (July 1-Oct 18 2024). I am now looking to further improve my Software Development skills in a Junior Dev role. I found a passion for creating innovation digital products
-                        whilst studying an experiential learning focused Business degree called <a href="https://courses.uwe.ac.uk/N191/business-team-entrepreneurship" target="_blank">Business(Team Entrepreneurship)</a> at The University of the West of England. After initially building a website for a student discount project in Yr1 of the course using WordPress & Elementor, I decided I needed a mobile app and ventured
+                        whilst studying an experiential learning focused Business degree called Business(Team Entrepreneurship) at The University of the West of England. After initially building a website for a student discount project in Yr1 of the course using WordPress & Elementor, I decided I needed a mobile app and ventured
                         down the difficult route of trying to build a mobile app. This was extremely challenging
                     </p>
                 </div>
@@ -61,40 +60,13 @@
                         decision to undertake a Coding Bootcamp was to address some of the learning difficulties I faced, with it extremely useful having on hand my trainer to explain concepts. Having working on my project by myself, I also learnt a lot by working with other trainees on projects.
                     </p>
                 </div>
-                <div class="intro_p_mob">
-                    <p>I have recently completed a 16wk
-                        <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>
-                        at iO Academy in Bath (July 1-Oct 18 2024). I am now looking to further improve my Software Development skills in a Junior Dev role. I found a passion for creating innovation digital products
-                        whilst studying an experiential learning focused Business degree called <a href="https://courses.uwe.ac.uk/N191/business-team-entrepreneurship" target="_blank">Business(Team Entrepreneurship)</a> at The University of the West of England.</p>
-                </div>
             </div>
 
         </div>
+    </section>
 
 
-<!--        <div class="about_me_para">-->
-<!--            <div class="intro_p_mob">-->
-<!--                <p>I have recently completed a 16wk-->
-<!--                    <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>-->
-<!--                    at iO Academy in Bath (July 1-Oct 18 2024). I am now looking to further improve my Software Development skills in a Junior Dev role. I found a passion for creating innovation digital products-->
-<!--                    whilst studying an experiential learning focused Business degree called <a href="https://courses.uwe.ac.uk/N191/business-team-entrepreneurship" target="_blank">Business(Team Entrepreneurship)</a> at The University of the West of England.</p>-->
-<!--            </div>-->
-<!--            <div class="intro_p_dt">-->
-<!--                <p>I have recently completed a 16wk-->
-<!--                <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>-->
-<!--                at iO Academy in Bath (July 1-Oct 18 2024). I am now looking to further improve my Software Development skills in a Junior Dev role. I found a passion for creating innovation digital products-->
-<!--                whilst studying an experiential learning focused Business degree called <a href="https://courses.uwe.ac.uk/N191/business-team-entrepreneurship" target="_blank">Business(Team Entrepreneurship)</a> at The University of the West of England. After initially building a website for a student discount project in Yr1 of the course using WordPress & Elementor, I decided I needed a mobile app and ventured-->
-<!--                down the difficult route of trying to build a mobile app. This was extremely challenging-->
-<!--                </p>-->
-<!--            </div>-->
-<!--            <div class="intro_p_dt">-->
-<!--                <p>for me as I was self-teaching myself programming whilst undertaking the development. Still I persevered, determined to master coding and I learnt many lessons from this experience and many things about myself, from how to manage my time well and deal with the stress of learning a new complex subject. My-->
-<!--                decision to undertake a Coding Bootcamp was to address some of the learning difficulties I faced, with it extremely useful having on hand my trainer to explain concepts. Having working on my project by myself, I also learnt a lot by working with other trainees on projects.-->
-<!--                </p>-->
-<!--            </div>-->
-<!--        </div>-->
 
-    </div>
 
     <div class="project_header">
         <h1>projects</h1>
@@ -103,14 +75,14 @@
     <div class="projects">
 
         <div class="projects_row1">
-            <a href="invoice.html">
+            <a href="bucket-list.html">
                 <div class="invoice">
-                    <div><span>Invoice Generator</span></div>
+                    <div><span>Bucket List</span></div>
                 </div>
             </a>
-            <a href="mobile_app.html">
+            <a href="film-quote-game.html">
                 <div class="hairdresser">
-                    <div><span>Hairdresser Mobile App</span></div>
+                    <div><span>Film Quote Game</span></div>
                 </div>
             </a>
 
@@ -133,7 +105,7 @@
     </div>
 
 
-    <div class="skills">
+    <section class="skills">
         <h1>skills & competencies</h1>
          <div class="skills_comp_sections">
              <div class="language">
@@ -177,13 +149,13 @@
                  </div>
              </div>
          </div>
-    </div>
+    </section>
 
 
 <div class="page_container">
     <footer>
         <div class="contact">
-            <h3>Email me:</h3>
+            <h3>Get in touch:</h3>
             <a href="mailto:merdassi.r@gmail.com">
                 <i id="email" class='bx bxs-envelope'></i>
             </a>
