--- a/interior.html
+++ b/interior.html
@@ -52,7 +52,7 @@
 
 <footer>
     <div class="contact">
-        <h3>Email me:</h3>
+        <h3>Get in touch:</h3>
         <a href="mailto:merdassi.r@gmail.com">
             <i id="email" class='bx bxs-envelope'></i>
         </a>
