--- a/index.html
+++ b/index.html
@@ -75,32 +75,45 @@
     <div class="projects">
 
         <div class="projects_row1">
-            <a href="bucket-list.html">
-                <div class="invoice">
-                    <div><span>Bucket List</span></div>
+            <a href="collector-app.html">
+                <div class="collector-app-project">
+                    <div><span>Collector App</span></div>
                 </div>
             </a>
             <a href="film-quote-game.html">
-                <div class="hairdresser">
+                <div class="film-quote-project">
                     <div><span>Film Quote Game</span></div>
                 </div>
             </a>
-
         </div>
         <div class="projects_row2">
-            <a href="interior.html">
-                <div class="interior">
-                    <div><span>Interior Design Website</span></div>
+            <a href="job-listings-website.html">
+                <div class="job-listings-project">
+                    <div><span>Job Listings Website</span></div>
                 </div>
             </a>
-
-            <a href="crm.html">
-                <div class="crm">
-                    <div><span>CRM</span></div>
+            <a href="furniture-store-api.html">
+                <div class="furniture-store-project">
+                    <div><span>Furniture Store API</span></div>
                 </div>
             </a>
-
         </div>
+        <div class="projects_row3">
+            <a href="academy-portal.html">
+                <div class="academy-portal-project">
+                    <div><span>Academy Portal</span></div>
+                </div>
+            </a>
+            <a href="journey-planner.html">
+                <div class="journey-planner-project">
+                    <div><span>Journey Planner</span></div>
+                </div>
+            </a>
+        </div>
+
+
+
+
 
     </div>
 
