add SQL to project headings

--- a/furniture-store-api.html
+++ b/furniture-store-api.html
@@ -40,7 +40,7 @@
 
 <div class="project_head">
     <div>
-        <h1>Furniture Store API (PHP OOP)</h1>
+        <h1>Furniture Store API (PHP OOP/SQL)</h1>
     </div>
     <div class="project_info">
         <img id="project_img" src="images/furniture_store.png" alt="Picture of a CRM">
