--- a/journey-planner.html
+++ b/journey-planner.html
@@ -40,7 +40,7 @@
 
 <div class="project_head">
     <div>
-        <h1>Journey Planner (React/Node Express/Tailwind)</h1>
+        <h1>Journey Planner (React/Node Express/Tailwind/SQL)</h1>
     </div>
     <div class="project_info">
         <img src="images/journey_planner.png" alt="London Underground journey planner">
