--- a/collector-app.html
+++ b/collector-app.html
@@ -40,7 +40,7 @@
 
 <div class="project_head">
     <div>
-        <h1>Collector App (HTML/CSS/PHP)</h1>
+        <h1>Collector App (HTML/CSS/PHP/SQL)</h1>
     </div>
     <div class="project_info">
         <img src="images/collector_app.png" alt="Invoice website">
