--- a/index.html
+++ b/index.html
@@ -1,181 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <meta charset='UTF-8'>
+    <title>RM Portfolio</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href='style.css' rel='stylesheet'>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="home">
-                <a href ="index.html">
-                    <h3>Ramsey Merdassi<br>Full Stack Web Developer</h3>
-                </a>
-            </div>
-
-            <div class="nav_icons">
-                <a href ="https://docs.google.com/document/d/1ni-M1XgUds6kA2DzHWZszNyYOW7tWs84gWVL2x9NGeM/edit?usp=drive_link" target="_blank">
-                    <i id="cv" class='bx bx-download'></i>
-                </a>
-                <a href="https://github.com/ramsey-merdassi" target="_blank">
-                    <i id="github" class='bx bxl-github' ></i>
-                </a>
-                <a href="https://www.linkedin.com/in/ramsey-merdassi-0868261a4" target="_blank">
-                    <i id="linkedin" class='bx bxl-linkedin'></i>
-                </a>
-            </div>
-        </nav>
-    </header>
-
-    <section class="about-me">
-        <div class="about-me-container">
-
-            <div class="intro_header">
-                <h1>about me</h1>
-            </div>
-
-            <div class="intro-p">
-                <div class="intro_p1">
-                    <p>I have recently completed a 16wk <a href="https://io-academy.uk/courses/full-stack-track/" target="_blank">Full Stack Coding Bootcamp</a>
-                        at iO Academy in Bath (July 1-Oct 18 2024). I am now looking to further improve my Software Development skills in a Junior Dev role. I found a passion for creating innovation digital products
-                        whilst studying an experiential learning focused Business degree called Business(Team Entrepreneurship) at The University of the West of England. After initially building a website for a student discount project in Yr1 of the course using WordPress & Elementor, I decided I needed a mobile app and ventured
-                        down the difficult route of trying to build a mobile app. This was extremely challenging
-                    </p>
-                </div>
-                <div class="intro_p2">
-                    <p>for me as I was self-teaching myself programming whilst undertaking the development. Still I persevered, determined to master coding and I learnt many lessons from this experience and many things about myself, from how to manage my time well and deal with the stress of learning a new complex subject. My
-                        decision to undertake a Coding Bootcamp was to address some of the learning difficulties I faced, with it extremely useful having on hand my trainer to explain concepts. Having working on my project by myself, I also learnt a lot by working with other trainees on projects.
-                    </p>
-                </div>
-            </div>
-
+    <nav>
+        <div class="home-btn">
+            <h3 class='name'>Ramsey Merdassi</h3>
+            <h3 class='job-title'>Full Stack Developer</h3>
         </div>
+        <div class='nav-icons'>
+            <a href='https://drive.google.com/file/d/10HdP54JhDZJXlDpkB8rKtsD38iEzEz2a/view?usp=sharing' target="_blank">
+                <i class='bx bx-download'></i>
+            </a>
+            <a href='https://github.com/ramsey-merdassi' target='_blank'>
+                <i class='bx bxl-github'></i>
+            </a>
+            <a href='https://www.linkedin.com/in/ramsey-merdassi-0868261a4' target='_blank'>
+                <i class='bx bxl-linkedin'></i>
+            </a>
+        </div>
+    </nav>
+    <section class='about-me'>
+        <p>I have spent most of my working life working in data teams in roles at UCAS, an online university in
+        Australia, the Ministry of Education in New Zealand, and managing a team for a marketing company in Scotland. It
+        was my experience working as part of an agile project team in New Zealand, tasked with creating a new school
+        infrastructure database, that got me interested in software development. In my roles of Regression Tester and
+        Data Quality Analyst, I was able to work with some great people and understand the complexities of creating and
+        launching a software product. It was a lot of fun seeing the product evolve in Sprint Reviews, having Morning
+        Tea get-togethers every Friday with the team, and having the opportunity to train staff in regional offices
+        across New Zealand during the migration phase.</p>
+        <p>After a lot of reflection during the pandemic, I decided to make a career change and return to university. I
+        had studied at university before, although had never achieved a Bachelor's degree. I considered taking a
+        Computer Science or Digital Media program, although opted to take an innovative entrepreneurship program that
+        was adopted from Finland just over a decade ago. This program was called <a href='https://te.uwe.ac.uk/'
+        target='_blank'>Business (Team Entrepreneurship)</a> and involved working in a team of 10-15 people, with the
+        aim of achieving annual business targets through executing an effective strategy. I had some ideas of products I
+        wanted to build and this program gave me the freedom to do this, whilst also testing their value with customers.
+        </p>
+        <p>In my 1st year on the program, I created a discount website aimed at helping students save money at local
+        food and beverage businesses. I was able to attract business customers who saw students as a good market to help
+        them bring in more revenue during quiet periods. At the end of the year, I decided to build a customer loyalty
+        mobile app. I started learning to write code, opting to use Flutter SDK and Dart to make it simpler to develop
+        for cross-platform and Firebase for the database. Over the next 2yrs I failed miserably, completely
+        underestimating the complexities of teaching myself software development.</p>
+        <p>However, through hard work, I was still able to achieve a First Class Honours. I developed a lot of key
+        competencies and learnings throughout this program, which make me a valuable team member, including:</p>
+        <ul>
+            <li>Being able to lead without a title
+            <li>Understanding the importance of following processes
+            <li>Respecting the motivations of peers and not pulling them in a direction they don't want to go
+            <li>Working effectively in a team, including communicating well with difficult individuals, and creating a
+            psychologically safe environment for all
+            <li>Providing constructive feedback that allows team members to reflect on their performance
+            <li>Making effective decisions that will make the business more successful
+            <li>Managing my time and priorities well to ensure work is completed ahead of deadline
+        </ul>
+        <p> Still determined to become competent at programming, after my degree, I enrolled in an in-person <a
+        href='https://io-academy.uk/courses/full-stack-track/' target='_blank'>16wk Full Stack bootcamp</a> in Bath from
+        July-October 2024. This program helped me to address my weaknesses and enabled me to learn in a structured way,
+        initially focusing on HTML/CSS, then building projects with PHP/JavaScript, and next working with libraries and
+        frameworks. This program vastly improved my programming competence thanks to the excellent training I received
+        and well thought through curriculum. I am now looking forward to joining a company to
+        demonstrate the skills I have gained from both of these programs, to improve further, and to help the business
+        grow. Below you'll find some of the projects I worked on during the bootcamp.</p>
     </section>
-
-
-
-
-    <div class="project_header">
-        <h1>projects</h1>
-    </div>
-
-    <div class="projects">
-
-        <div class="projects_row1">
-            <a href="collector-app.html">
-                <div class="collector-app-project">
-                    <div><span>Collector App</span></div>
-                </div>
-            </a>
-            <a href="film-quote-game.html">
-                <div class="film-quote-project">
-                    <div><span>Film Quote Game</span></div>
-                </div>
-            </a>
-        </div>
-        <div class="projects_row2">
-            <a href="job-listings-website.html">
-                <div class="job-listings-project">
-                    <div><span>Job Listings Website</span></div>
-                </div>
-            </a>
-            <a href="furniture-store-api.html">
-                <div class="furniture-store-project">
-                    <div><span>Furniture Store API</span></div>
-                </div>
-            </a>
-        </div>
-        <div class="projects_row3">
-            <a href="academy-portal.html">
-                <div class="academy-portal-project">
-                    <div><span>Academy Portal</span></div>
-                </div>
-            </a>
-            <a href="journey-planner.html">
-                <div class="journey-planner-project">
-                    <div><span>Journey Planner</span></div>
-                </div>
-            </a>
-        </div>
-
-
-
-
-
-    </div>
-
-
-    <section class="skills">
-        <h1>skills & competencies</h1>
-         <div class="skills_comp_sections">
-             <div class="language">
-                 <p>My software development skillset:</p>
-                 <div class="list">
-                     <div>
-                         <ul>
-                             <li>HTML</li>
-                             <li>CSS</li>
-                             <li>PHP</li>
-                             <li>JavaScript</li>
-                             <li>React</li>
-                             <li>Typescript</li>
-                         </ul>
-                     </div>
-                     <div>
-                         <ul>
-                             <li>Agile Professional <br>Certification</li>
-                             <li>Unit Testing</li>
-                             <li>Node.js</li>
-                             <li>SQL</li>
-                             <li>Mongo DB</li>
-                         </ul>
-                     </div>
-                 </div>
-             </div>
-
-             <div class="competency">
-                 <p>My core competencies:</p>
-                 <div class="list">
-                     <div>
-                         <ul>
-                             <li>Managing others</li>
-                             <li>Teamwork</li>
-                             <li>Time management</li>
-                             <li>Decision-making</li>
-                             <li>Creativity</li>
-                             <li>Attention to detail</li>
-                         </ul>
-                     </div>
-                 </div>
-             </div>
-         </div>
-    </section>
-
-
-<div class="page_container">
-    <footer>
-        <div class="contact">
-            <h3>Get in touch:</h3>
-            <a href="mailto:merdassi.r@gmail.com">
-                <i id="email" class='bx bxs-envelope'></i>
-            </a>
-        </div>
-    </footer>
-</div>
-
-
 </body>
+
 </html>
