--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <nav>
-        <div class="home-btn">
+        <div class="name-title">
             <h3 class='name'>Ramsey Merdassi</h3>
             <h3 class='job-title'>Full Stack Developer</h3>
         </div>
@@ -79,6 +79,19 @@
         demonstrate the skills I have gained from both of these programs, to improve further, and to help the business
         grow. Below you'll find some of the projects I worked on during the bootcamp.</p>
     </section>
+    <footer>
+            <h3>Contact me:</h3>
+            <div class='email'>
+                <i class='bx bxs-envelope'></i>
+                <a href='mailto:merdassi.r@gmail.com'>
+                    <h3>merdassi.r@gmail.com</h3>
+                </a>
+            </div>
+            <div class='phone-no'>
+                <i class='bx bxs-phone'></i>
+                <h3>07387811871</h3>
+            </div>
+    </footer>
 </body>
 
 </html>
