add project imaage carousel

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,
     800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href='style.css' rel='stylesheet'>
+    <script src='carousel.js' defer></script>
 </head>
 
 <body>
@@ -28,7 +29,7 @@
                 <i class='bx bx-download'></i>
             </a>
             <a href='https://github.com/ramsey-merdassi' target='_blank'>
-                <i class='bx bxl-github'></i>
+                <i id='github' class='bx bxl-github'></i>
             </a>
             <a href='https://www.linkedin.com/in/ramsey-merdassi-0868261a4' target='_blank'>
                 <i class='bx bxl-linkedin'></i>
@@ -79,18 +80,36 @@
         demonstrate the skills I have gained from both of these programs, to improve further, and to help the business
         grow. Below you'll find some of the projects I worked on during the bootcamp.</p>
     </section>
-    <footer>
-            <h3>Contact me:</h3>
-            <div class='email'>
-                <i class='bx bxs-envelope'></i>
-                <a href='mailto:merdassi.r@gmail.com'>
-                    <h3>merdassi.r@gmail.com</h3>
+    <section class='projects'>
+        <div class='collector-app'>
+            <h2>Collector App (html, css, php, sql)</h2>
+            <div class='carousel'>
+                <i class='bx bx-chevron-left'></i>
+                <img id='collector-app-img' src="images/collector_app1.png" alt='collector app screenshot'>
+                <i class='bx bx-chevron-right'></i>
+            </div>
+            <div class="project-links">
+                <a href='https://2024-ramseym.dev.io-academy.uk/bucket-list-collector-app/' target='_blank'>
+                    <i class='bx bx-link-external'></i>
+                </a>
+                <a href='https://github.com/ramsey-merdassi/bucket-list-collector-app' target='_blank'>
+                    <i id='github-repo' class='bx bxl-github'></i>
                 </a>
             </div>
-            <div class='phone-no'>
-                <i class='bx bxs-phone'></i>
-                <h3>07387811871</h3>
-            </div>
+        </div>
+    </section>
+    <footer>
+        <h3>Contact me:</h3>
+        <div class='email'>
+            <i class='bx bxs-envelope'></i>
+            <a href='mailto:merdassi.r@gmail.com'>
+                <h3>merdassi.r@gmail.com</h3>
+            </a>
+        </div>
+        <div class='phone-no'>
+            <i class='bx bxs-phone'></i>
+            <h3>07387811871</h3>
+        </div>
     </footer>
 </body>
 
