fix nav bar icons

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         grow. Below you'll find some of the projects I worked on during the bootcamp.</p>
     </section>
     <section class='projects'>
-        <div class='collector-app'>
+        <div class='project'>
             <h2>Collector App (html, css, php, sql)</h2>
             <div class='carousel'>
                 <i class='bx bx-chevron-left'></i>
-                <img id='collector-app-img' src="images/collector_app1.png" alt='collector app screenshot'>
+                <img class='project-img' src="images/collector_app1.png" alt='collector app screenshot'>
                 <i class='bx bx-chevron-right'></i>
             </div>
             <div class="project-links">
@@ -97,6 +97,12 @@
                 </a>
             </div>
         </div>
+        <p class='project-description'>This project improved my understanding of the HTTP request-response protocol
+        between client/server and the different types of request method. I added client-side and server-side form
+        validation, understanding why this is necessary. I learnt how to incorporate PHP in a HTML file, making use of
+        PHP shorthand syntax. Building the containers helped me improve my knowledge of CSS flexbox and I added
+        breakpoints and relative units of measurement to make the site responsive. I also improved my ability to write
+        SQL queries, adding, extracting, and ordering data.
     </section>
     <footer>
         <h3>Contact me:</h3>
