--- a/index.html
+++ b/index.html
@@ -97,12 +97,11 @@
                 </a>
             </div>
         </div>
-        <p class='project-description'>This project improved my understanding of the HTTP request-response protocol
-        between client/server and the different types of request method. I added client-side and server-side form
+        <p class='project-description'>This Collector App project improved my understanding of the HTTP request-response
+        protocol between client/server and the POST/GET request methods. I added client-side and server-side form
         validation, understanding why this is necessary. I learnt how to incorporate PHP in a HTML file, making use of
-        PHP shorthand syntax. Building the containers helped me improve my knowledge of CSS flexbox and I added
-        breakpoints and relative units of measurement to make the site responsive. I also improved my ability to write
-        SQL queries, adding, extracting, and ordering data.
+        PHP shorthand syntax. Building the containers helped me to improve my knowledge of CSS flexbox and I added
+        breakpoints/relative units to make the site responsive. I wrote SQL queries to add, extract, and order data.</p>
     </section>
     <footer>
         <h3>Contact me:</h3>
