adjust navbar styling

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         for cross-platform and Firebase for the database. Over the next 2yrs I failed miserably, completely
         underestimating the complexities of teaching myself software development.</p>
         <p>However, through hard work, I was still able to achieve a First Class Honours. I developed a lot of key
-        competencies and learnings throughout this program, which make me a valuable team member, including:</p>
+        competencies andiiç learnings throughout this program, which make me a valuable team member, including:</p>
         <ul>
             <li>Being able to lead without a title
             <li>Understanding the importance of following processes
