--- a/index.html
+++ b/index.html
@@ -92,8 +92,134 @@
                     <i class='bx bx-link-external'></i>
                 </a>
                 <a href='https://github.com/ramsey-merdassi/bucket-list-collector-app' target='_blank'>
-                    <i id='github-repo' class='bx bxl-github'></i>
+                    <i class='bx bxl-github github-repo'></i>
                 </a>
+            </div>
+        </div>
+        <p class='project-description'>This Collector App project improved my understanding of the HTTP request-response
+        protocol between client/server and the POST/GET request methods. I added client-side and server-side form
+        validation, understanding why this is necessary. I learnt how to incorporate PHP in a HTML file, making use of
+        PHP shorthand syntax. Building the containers helped me to improve my knowledge of CSS flexbox and I added
+        breakpoints/relative units to make the site responsive. I wrote SQL queries to add, extract, and order data.</p>
+        <div class='project'>
+            <h2>Film Quote Quiz (html, css, javascript)</h2>
+            <div class='carousel'>
+                <i class='bx bx-chevron-left'></i>
+                <img class='project-img' src="images/film_quiz1.png" alt='film quote quiz screenshot'>
+                <i class='bx bx-chevron-right'></i>
+            </div>
+            <div class="project-links">
+                <a href='https://2024-ramseym.dev.io-academy.uk/2024-jul-fst-film-quote-quiz/' target='_blank'>
+                    <i class='bx bx-link-external'></i>
+                </a>
+                <a href='https://github.com/ramsey-merdassi/film-quote-quiz' target='_blank'>
+                    <i class='bx bxl-github github-repo'></i>
+                </a>
+            </div>
+        </div>
+        <p class='project-description'>The first team project of the bootcamp involved working alongside 5 other
+        students to build a game using JavaScript. At the start of week, I met with the team to discuss, score, and
+        assign stories. I took part in daily Stand-Ups and a Sprint Review/Retrospective at the end of the week. I
+        gained experience carrying out peer reviews, making pull requests, and using Git to create branches/handle merge
+        conflicts.</p>
+        <p class='project-description'>My assigned stories included game design, building the initial screen with
+        instructions modal, displaying the next quote, timer, and leaderboard. Creating the modals enabled me to become
+        more familiar with the CSS box model and how to use JavaScript with CSS. I used asynchronous operations to
+        fetch the film data in JSON format and send data to an API for the leaderboard. My biggest challenge during the
+        project came when click events were being duplicated, causing the quiz to skip quotes and end within a few
+        seconds. Solving this problem helped me to see the benefit of using Chrome DevTools for debugging.</p>
+        <div class='project'>
+            <h2>Job Listing Website (react, bootstrap)</h2>
+            <div class='carousel'>
+                <i class='bx bx-chevron-left'></i>
+                <img class='project-img' src="images/job_listing1.png" alt='job listing website screenshot'>
+                <i class='bx bx-chevron-right'></i>
+            </div>
+            <div class="project-links">
+                <a href='https://2024-thomask.dev.io-academy.uk/dist/' target='_blank'>
+                    <i class='bx bx-link-external'></i>
+                </a>
+                <a href='https://github.com/ramsey-merdassi/2024-jul-fst-job-search-fe' target='_blank'>
+                    <i class='bx bxl-github github-repo'></i>
+                </a>
+            </div>
+        </div>
+        <p class='project-description'>This Job Listing website was once again completed in a team of 6. My assigned
+        stories were to display the recent jobs and to allow users to browse/filter skills. I enjoyed using Bootstrap
+        for this project and learnt how to use components, props, and hooks in React. I learnt the importance of
+        designing the architecture prior to build, especially with the hooks needing to follow a tree like structure. It
+        was also beneficial to see how smaller files and a structured file system aid readability.
+        </p>
+        <div class='project'>
+            <h2>Furniture Store API (php oop, sql)</h2>
+            <div class='carousel'>
+                <i class='bx bx-chevron-left'></i>
+                <img class='project-img' src="images/furniture_store1.png" alt='furniture store website screenshot'>
+                <i class='bx bx-chevron-right'></i>
+            </div>
+            <div class="project-links">
+                <a href='https://2024-henryt.dev.io-academy.uk/build/' target='_blank'>
+                    <i class='bx bx-link-external'></i>
+                </a>
+                <a href='https://github.com/ramsey-merdassi/furniture-store-API' target='_blank'>
+                    <i class='bx bxl-github github-repo'></i>
+                </a>
+            </div>
+        </div>
+        <p class='project-description'>I worked on this Furniture Store API project in a team of 3. My stories
+        included architecture/database design, displaying products, and handling currency
+        conversion. I created different types of classes including abstract, interface, hydrator, and service. I also
+        became more familiar with error handling and providing responses. Overall, I enjoyed writing object-oriented
+        code and would like more practise with it.</p>
+        <div class='project'>
+            <h2>Academy Portal (slim, javascript)</h2>
+            <div class='carousel'>
+                <i class='bx bx-chevron-left'></i>
+                <img class='project-img' src="images/academy_portal1.png" alt='academy portal screenshot'>
+                <i class='bx bx-chevron-right'></i>
+            </div>
+            <div class="project-links">
+                <a href='https://portal.dev.io-academy.uk/' target='_blank'>
+                    <i class='bx bx-link-external'></i>
+                </a>
+                <a href='https://github.com/ramsey-merdassi/academy-portal' target='_blank'>
+                    <i class='bx bxl-github github-repo'></i>
+                </a>
+            </div>
+        </div>
+        <p class='project-description'>The AcademyPortal project is an in-house business management app used by the
+        course provider, that includes contributions from past cohorts. Working in a team of 6, I was tasked with
+        building new features using the Slim PHP framework MVC pattern, including giving users the capability to edit
+        and delete trainers. I was also tasked with fixing bugs, such as resolving why a status message was appearing on
+        the wrong page. This was my first time working with a large codebase, and it was a good challenge trying to
+        understand existing code, although it was made more difficult due to much of the code being written using
+        jQuery.</p>
+        <p class='project-description'>I volunteered to be Scrum Master for this project, supporting team members across
+        the week, leading Stand-Ups and end of day meetings, and completing a burndown chart at the end of each day. All
+        stories accepted on the Monday were completed by Wednesday and I received a lot of positive feedback from my
+        cohort and trainer. I focused on respecting the motivations of individuals with the stories they accepted,
+        providing regular updates on our progress, giving team members a platform to explain their solutions to enhance
+        learning, encouraging team members to address any weaknesses by going out of their comfort zone, and ensuring
+        the Trello board was kept organised, with all stories adhering to our agreed Definition of Done.</p>
+        <div class='project'>
+            <h2>Journey Planner (react, express, tailwind, sql)</h2>
+            <div class='carousel'>
+                <i class='bx bx-chevron-left'></i>
+                <img class='project-img' src="images/journey_planner1.png" alt='journey planner screenshot'>
+                <i class='bx bx-chevron-right'></i>
+            </div>
+            <div class="project-links">
+                <a href='https://journeyplannerfe.2024-ramseym.dev.io-academy.uk/' target='_blank'>
+                    <i class='bx bx-link-external'></i>
+                </a>
+                <a href='https://github.com/ramsey-merdassi/2024-fst-tube-planner-flex-FE' target='_blank'>
+                    <i class='bx bxl-github github-repo'></i>
+                </a>
+                <span>FE</span>
+                <a href='https://github.com/ramsey-merdassi/2024-fst-tube-planner-flex-BE' target='_blank'>
+                    <i class='bx bxl-github github-repo'></i>
+                </a>
+                <span>BE</span>
             </div>
         </div>
         <p class='project-description'>This Collector App project improved my understanding of the HTTP request-response
