--- a/index.html
+++ b/index.html
@@ -222,11 +222,19 @@
                 <span>BE</span>
             </div>
         </div>
-        <p class='project-description'>This Collector App project improved my understanding of the HTTP request-response
-        protocol between client/server and the POST/GET request methods. I added client-side and server-side form
-        validation, understanding why this is necessary. I learnt how to incorporate PHP in a HTML file, making use of
-        PHP shorthand syntax. Building the containers helped me to improve my knowledge of CSS flexbox and I added
-        breakpoints/relative units to make the site responsive. I wrote SQL queries to add, extract, and order data.</p>
+        <p class='project-description'>In the final project of the bootcamp, I worked in a team of 3 to build the
+        frontend and backend of a London Underground Journey Planner app. I was initially involved in planning the app
+        and database architecture. On the frontend, I added the drop-down lists of stations, ensuring once a station had
+        been selected from the first drop-down, it was absent from the second. On the backend, I wrote the functionality
+        to display journey costs and assisted a team member in getting the journeys.</p>
+        <p class='project-description'>This was a very challenging project, and we were unable to complete the
+        story in which users could view how to reach their destination via multiple changes. I was informed during the
+        Sprint Review that this would have involved using Dijkstra's algorithm. This project certainly gave me an
+        appreciation for the amount of work that's involved in full stack development and the importance of working in
+        unison.</p>
+        <p class='project-description'>Now that I have graduated from iO Academy, I am focusing on re-completing team
+        projects to allow me to work on the stories that were assigned to others. I am also
+        working on another side project and revisiting learning Dart/Flutter for mobile app development.</p>
     </section>
     <footer>
         <h3>Contact me:</h3>
