--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
 </head>
 
 <body>
-    <nav>
-        <div class="name-title">
-            <h3 class='name'>Ramsey Merdassi</h3>
-            <h3 class='job-title'>Full Stack Developer</h3>
-        </div>
-        <div class='nav-icons'>
-            <a href='https://drive.google.com/file/d/10HdP54JhDZJXlDpkB8rKtsD38iEzEz2a/view?usp=sharing' target="_blank">
-                <i class='bx bx-download'></i>
-            </a>
-            <a href='https://github.com/ramsey-merdassi' target='_blank'>
-                <i id='github' class='bx bxl-github'></i>
-            </a>
-            <a href='https://www.linkedin.com/in/ramsey-merdassi-0868261a4' target='_blank'>
-                <i class='bx bxl-linkedin'></i>
-            </a>
-        </div>
-    </nav>
+<!--    <nav>-->
+<!--        <div class="name-title">-->
+<!--            <h3 class='name'>Ramsey Merdassi</h3>-->
+<!--            <h3 class='job-title'>Full Stack Developer</h3>-->
+<!--        </div>-->
+<!--        <div class='nav-icons'>-->
+<!--            <a href='https://drive.google.com/file/d/10HdP54JhDZJXlDpkB8rKtsD38iEzEz2a/view?usp=sharing' target="_blank">-->
+<!--                <i class='bx bx-download'></i>-->
+<!--            </a>-->
+<!--            <a href='https://github.com/ramsey-merdassi' target='_blank'>-->
+<!--                <i id='github' class='bx bxl-github'></i>-->
+<!--            </a>-->
+<!--            <a href='https://www.linkedin.com/in/ramsey-merdassi-0868261a4' target='_blank'>-->
+<!--                <i class='bx bxl-linkedin'></i>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--    </nav>-->
     <section class='about-me'>
         <p>I have spent most of my working life working in data teams in roles at UCAS, an online university in
         Australia, the Ministry of Education in New Zealand, and managing a team for a marketing company in Scotland. It
